* configure.ac, libtool.m4: Ensure that a c++ compiler exists before checking for the c++ preprocessor. Apparently reported by multiple people, multiple times.

--- a/configure.ac
+++ b/configure.ac
@@ -104,7 +104,10 @@ AC_PROG_LN_S
 pushdef([AC_MSG_ERROR], [CXX=no])
 AC_PROG_CXX
 popdef([AC_MSG_ERROR])
-AM_CONDITIONAL(HAVE_CXX, [test "x$CXX" != xno])
+AM_CONDITIONAL(HAVE_CXX, 
+[test -n "$CXX" && ( test "X$CXX" != "Xno" &&
+  ( (test "X$CXX" = "Xg++" && `g++ -v >/dev/null 2>&1` ) || 
+  (test "X$CXX" != "Xg++")))])
 
 pushdef([AC_MSG_ERROR], [F77=no])
 AC_PROG_F77
