--- a/Makefile.maint
+++ b/Makefile.maint
@@ -1,4 +1,4 @@
-## Makefile.maint -- Makefile rules for libtool maintainers
+## Makefile.maint -- Makefile rules for libtool maintainers -*-Makefile-*-
 ##
 ## Copyright (C) 2004 Free Software Foundation
 ##
@@ -21,8 +21,12 @@
 # include the Makefile than figure out a way to put them in here too
 include Makefile
 Makefile:
-	@echo " *** Source directory must be configured to use the "
-	@echo " *** maintainer rules."
+	@echo " *** Run maintainer rules from the build tree, with"
+	@echo " *** \`make -f../Makefile.maint' for example, where"
+	@echo " *** \`../' is the relative path back to the directory"
+	@echo " *** that contains the \`Makefile.maint'.  Alternatively,"
+	@echo " *** run `./configure' in the source tree for an in"
+	@echo " *** tree build."
 	@exit 1
 
 TEXI2HTML = texi2html
