Don't use C99 flexible array types as we want to be C89 compatible.  Instead, revert to the old way of doing things with an array of symbol name vs. address, and adding the originator as the first symbol but with a NULL address:
* config/ltmain.in (func_extract_dlsyms): Store originator as a
NULL address symbol.
* libltdl/ltdl.h (lt_dlsymbol): Removed.
(lt_dlsymlist): Remove originator field.
(LTDL_SET_PRELOADED_SYMBOLS): Adjust.
* libltdl/loaders/preopen.c (vm_open, lt_dlpreload_open): Adjust
for new types.
(vm_sym): Skip the new originator symbol when scanning symbol
names.
* m4/libtool.m4 (_LT_CMD_GLOBAL_SYMBOLS): Adjust preloaded symbols
test file to match.
* NEWS: Updated.

--- a/config/ltmain.in
+++ b/config/ltmain.in
@@ -962,23 +962,18 @@ extern \"C\" {
 
 /* The mapping between symbol names and symbols.  */
 const struct {
-  const char *originator;
-  const struct {
-    const char *name;
-    void *address;
-  } symbols[];
+   const char *name;
+   void *address;
 }
-lt_${my_prefix}_LTX_preloaded_symbols =
+lt_${my_prefix}_LTX_preloaded_symbols[] =
 {\
-  \"$my_originator\",
-  {
+  { \"$my_originator\", (void *) 0 },
 "
 
 	  eval "$global_symbol_to_c_name_address" < "$nlist" >> "$output_objdir/$my_dlsyms"
 
 	  $echo >> "$output_objdir/$my_dlsyms" "\
   {0, (void *) 0}
-  }
 };
 
 /* This works around a problem in FreeBSD linker */
