* libtoolize.in, config/ltmain.in: Add CDPATH protection to preamble. * tests/defs: Put a full m4sh.m4 style 'Be Bourne compatible' preamble in here too. * HACKING: Note that tests/defs needs synching with m4sh.m4 too. * TODO: Add new item.

--- a/libtoolize.in
+++ b/libtoolize.in
@@ -70,6 +70,10 @@ elif test -n "${BASH_VERSION+set}${KSH_VERSION+set}" && (set -o posix) >/dev/nul
 fi
 DUALCASE=1; export DUALCASE # for MKS sh
 
+# The HP-UX ksh and POSIX shell print the target directory to stdout
+# if CDPATH is set.
+(unset CDPATH) >/dev/null 2>&1 && unset CDPATH
+
 : ${CP="cp -f"}
 : ${LN_S="@LN_S@"}
 : ${MKDIR="mkdir"}
