--- a/config/ltmain.in
+++ b/config/ltmain.in
@@ -80,6 +80,10 @@ elif test -n "${BASH_VERSION+set}${KSH_VERSION+set}" && (set -o posix) >/dev/nul
 fi
 DUALCASE=1; export DUALCASE # for MKS sh
 
+# The HP-UX ksh and POSIX shell print the target directory to stdout
+# if CDPATH is set.
+(unset CDPATH) >/dev/null 2>&1 && unset CDPATH
+
 dirname="s,/[^/]*$,,"
 basename="s,^.*/,,g"
 
