* config/ltmain.in (func_mode_link): Pass otherwise unrecognised + and - style switches to the compiler. * NEWS: Updated.

--- a/config/ltmain.in
+++ b/config/ltmain.in
@@ -2996,6 +2996,10 @@ func_mode_link ()
 	  arg="\"$arg\""
 	  ;;
 	esac
+
+	if test -z "$prev"; then
+	  compiler_flags="$compiler_flags $arg"
+	fi
 	;;
 
       *.$objext)
