* demo/configure.ac pdemo/configure.ac: Add missing AM_PROG_CC_C_O to testsuite.

--- a/demo/configure.ac
+++ b/demo/configure.ac
@@ -30,6 +30,7 @@ AC_CONFIG_SRCDIR([hello.c])
 ## Automake Initialisation. ##
 ## ------------------------ ##
 AM_INIT_AUTOMAKE(AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION)
+AM_PROG_CC_C_O
 
 
 ## ---------------- ##
